// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLayout renders <AppLayout/> with children 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child
  </div>
  <div>
    <span>
      Child
    </span>
    <p>
      Child
    </p>
  </div>
</div>
`;

exports[`AppLayout renders <AppLayout/> with one child 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child 1
  </div>
</div>
`;

exports[`AppLayout renders empty <AppLayout/> 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
</div>
`;
